<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">Reverb</string>
    <string name="service_label">Reverb 알림 브리지</string>

    <string name="main_title">Reverb</string>
    <string name="main_subtitle">안드로이드 알림을 브라우저로 안전하게 미러링하는 로컬 허브</string>
    <string name="connection_card_title">연결 허브</string>
    <string name="connection_card_summary">현재 접속 주소와 토큰, QR 코드로 웹 알림 센터에 바로 연결할 수 있습니다.</string>
    <string name="status_running">서버 실행 중</string>
    <string name="status_waiting_permission">권한 필요</string>
    <string name="status_summary_ready">알림 접근이 활성화되어 웹 클라이언트를 받을 준비가 되었습니다.</string>
    <string name="status_summary_permission">알림 접근 권한을 허용하면 서버와 웹 미러링이 시작됩니다.</string>
    <string name="label_url">접속 주소</string>
    <string name="label_token">연결 토큰</string>
    <string name="label_qr">빠른 접속 QR</string>
    <string name="label_connected_clients">연결된 브라우저</string>
    <string name="label_permission_status">알림 접근</string>
    <string name="label_battery_optimization">배터리 최적화</string>
    <string name="value_unknown">확인 중</string>
    <string name="value_no_url">권한을 허용하면 주소가 표시됩니다</string>
    <string name="value_permission_enabled">허용됨</string>
    <string name="value_permission_disabled">허용 필요</string>
    <string name="value_battery_ignored">예외 적용됨</string>
    <string name="value_battery_not_ignored">예외 권장</string>
    <string name="connections_count">%1$d개 브라우저 연결</string>
    <string name="token_value">토큰 %1$s</string>
    <string name="qr_hint">QR을 스캔하면 웹 화면이 열리고 토큰이 자동으로 채워집니다.</string>
    <string name="dashboard_card_title">디바이스 상태</string>
    <string name="dashboard_card_summary">권한과 백그라운드 동작 상태를 확인하고 필요한 설정으로 이동할 수 있습니다.</string>
    <string name="actions_card_title">빠른 작업</string>
    <string name="actions_card_summary">핵심 작업을 한 화면에서 처리할 수 있도록 구성했습니다.</string>
    <string name="btn_copy_url">주소 복사</string>
    <string name="btn_copy_token">토큰 복사</string>
    <string name="btn_grant_permission">알림 접근 허용</string>
    <string name="btn_manage_filters">필터 관리</string>
    <string name="btn_test_notification">테스트 알림 전송</string>
    <string name="btn_reset_token">토큰 재생성</string>
    <string name="copy_url_label">접속 주소 복사</string>
    <string name="copy_token_label">토큰 복사</string>
    <string name="qr_code_label">웹 접속 QR 코드</string>
    <string name="toast_url_copied">접속 주소를 복사했습니다.</string>
    <string name="toast_token_copied">토큰을 복사했습니다.</string>
    <string name="toast_token_reset">토큰을 새로 만들었습니다.</string>
    <string name="toast_test_sent">테스트 알림을 전송했습니다. 연결된 웹 화면을 확인하세요.</string>
    <string name="toast_test_failed">테스트 알림 전송에 실패했습니다: %1$s</string>
    <string name="toast_copy_unavailable">복사할 값이 아직 없습니다.</string>
    <string name="toast_qr_unavailable">QR 코드를 생성할 수 없습니다.</string>

    <string name="filter_title">필터 관리</string>
    <string name="filter_subtitle">어떤 앱의 알림을 웹으로 보낼지 선택합니다.</string>
    <string name="filter_search_hint">앱 이름 또는 패키지명 검색</string>
    <string name="filter_mode_title">필터 모드</string>
    <string name="filter_mode_blacklist">차단 목록</string>
    <string name="filter_mode_whitelist">허용 목록</string>
    <string name="filter_mode_blacklist_desc">선택한 앱만 제외하고 나머지 알림을 전달합니다.</string>
    <string name="filter_mode_whitelist_desc">선택한 앱만 전달하고 나머지는 제외합니다.</string>
    <string name="filter_selection_count">선택된 앱 %1$d개</string>
    <string name="filter_clear_all">모두 해제</string>
    <string name="filter_empty">조건에 맞는 앱이 없습니다.</string>
    <string name="filter_selected">선택됨</string>
    <string name="filter_not_selected">선택 안 됨</string>
    <string name="filter_toggle_label">%1$s 필터 선택</string>
</resources>
